GearsetPOC/force-app/main/default/objects/Promotion/Promotion.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>