GearsetPOC/force-app/main/default/objects/Promotion/fields/Booking_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_End_Date__c</fullName>
    <label>Booking End Date</label>
    <type>DateTime</type>
</CustomField>