GearsetPOC/force-app/main/default/objects/Promotion/fields/Travel_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Travel_End_Date__c</fullName>
    <label>Travel End Date</label>
    <type>DateTime</type>
</CustomField>