GearsetPOC/force-app/main/default/objects/Promotion/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name</columns>
    <columns>CreatedBy</columns>
    <columns>Campaign</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>LoyaltyPromotionType</columns>
    <columns>FulfillmentAction</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>